updated bg position to avoid cropping

--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ body {
 
 .dash-bg-img img {
   object-fit: cover;
-  object-position: left;
+  object-position: left top;
   height: 100%;
   width: 100%;
 }
